--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
                 <path d="M21 3L3 21" stroke="white" stroke-width="3" stroke-linecap="round"/>
             </svg>
         </button>
-        <video src="https://publiccdn.kn0.dev/erkan.mp4" controls></video>
+        <video src="https://www.sonu.ch/~srket/idiocracy.mp4" controls></video>
     </div>
     <div id="tampermonkey">
 
@@ -275,13 +275,13 @@ NEVER GONNA TELL A LIE AND HURT YOU
 
     <div id="buttons">
         <button  id="dropdown-button" onclick="dropdownToggle()">Harita Tıkla Git</button>
-        <a class="button" href="https://github.com/Kn0ax/porcay/raw/erkan/tempman.user.js">Script'i Kur</a>
+        <a class="button" href="https://github.com/rktfier/porcay-overlay/raw/master/tempman.user.js">Script'i Kur</a>
         <button  onclick="videoDialogToggle()" class="button">Anlamayanlar için video</button>
     </div>
 
     <div id="dropdown">
-        <a href="/tik-bayrak.html">Bayrak</a>
-        <a href="/tik.html">Porçay Logo</a>
+        <a href="idiocrium/tik-bayrak.html">Bayrak</a>
+        <a href="idiocrium/tik.html">Porçay Logo</a>
 
     </div>
 </div>
@@ -315,11 +315,11 @@ NEVER GONNA TELL A LIE AND HURT YOU
     };
 
     if (navigator.mobileCheck()) {
-        window.location.href = "/mobil.html"
+        window.location.href = "idiocrium/mobil.html"
     }
     console.log(navigator.mobileCheck());
     function copyToClipboard() {
-        navigator.clipboard.writeText("https://github.com/okunamayanad/r-place-2023/raw/main/RPlace.2023.user.js").then(() => {
+        navigator.clipboard.writeText("https://github.com/rktfier/porcay-overlay/raw/master/tempman.user.js").then(() => {
             alert('URL kopyalandı.')
         })
     }
@@ -411,7 +411,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
 </script>
 
 <footer>
-    made & designed by <a href="https://kax.one" target="_blank" rel="noopener noreferrer">Kax</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/okunamayanad">okunamayanad</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/Kn0ax">Kn0ax</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/rktfier">rktfier</a> , Rexolion , <a target="_blank" rel="noopener noreferrer" href="https://github.com/hypenord">hypenord</a> and with help from community <3
+    made & designed by <a href="https://kax.one" target="_blank" rel="noopener noreferrer">Kax</a> , <a target="_blank" rel="noopener noreferrer" href="https://github.com/rktfier">rktfier</a> , Rexolion , <a target="_blank" rel="noopener noreferrer" href="https://github.com/hypenord">hypenord</a> and with help from community <3
 </footer>
 </body>
 
