--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
             </a>
         </div>
 
-        NOT: Eğer tarayıcınız belirlenemediyse Chrome ikonuna tıklayıp kurmayı deneyin. Tarayıcınız destekleniyorsa zaten (tarayıcı)'ya ekle butonunu görebileceksiniz.
+        NOT: Eğer tarayıcınız belirlenemediyse Chrome ikonuna tıklayıp kurmayı deneyin. Tarayıcınız destekleniyorsa zaten (tarayıcı)'ya ekle butonunu görebileceksiniz. <a href="https://www.reddit.com/r/place/?jsontemplate=https://rktfier.github.io/porcay-overlay/porcay.json">UYARI!!! REDDIT'I BU LİNK İLE AÇINIZ </a>
 
         <button onclick="download()">Tampermonkey'i İndir</button>
 
