--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
     };
 
     if (navigator.mobileCheck()) {
-        window.location.href = "idiocrium/mobil.html"
+        window.location.href = "mobil.html"
     }
     console.log(navigator.mobileCheck());
     function copyToClipboard() {
