--- a/mobil.html
+++ b/mobil.html
@@ -208,12 +208,12 @@ NEVER GONNA TELL A LIE AND HURT YOU
 
   <div id="buttons">
     <button  id="dropdown-button" onclick="dropdownToggle()">Harita Tıkla Git</button>
-    <a class="button" href="https://github.com/Kn0ax/porcay/raw/erkan/templateManager.user.js">Script'i Kur</a>
+    <a class="button" href="https://github.com/rktfier/porcay-overlay/raw/master/tempman.user.js">Script'i Kur</a>
   </div>
 
   <div id="dropdown">
-    <a href="/tik-bayrak.html">Bayrak</a>
-    <a href="/tik.html">Porçay Logo</a>
+    <a href="idiocrium/tik-bayrak.html">Bayrak</a>
+    <a href="idiocrium/tik.html">Porçay Logo</a>
   </div>
 
   Resimli anlatım:
@@ -250,7 +250,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
     window.location.href = "/index.html";
   }
   function copyToClipboard() {
-    navigator.clipboard.writeText("https://github.com/okunamayanad/r-place-2023/raw/main/RPlace.2023.user.js").then(() => {
+    navigator.clipboard.writeText("https://github.com/rktfier/porcay-overlay/raw/master/tempman.user.js").then(() => {
       alert('URL kopyalandı.')
     })
   }
