--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ NEVER GONNA TELL A LIE AND HURT YOU
         } else if (browser === 'safari') {
             window.open('https://apps.apple.com/us/app/tampermonkey/id1482490089?mt=12')
         } else {
-            alert('olum sen nerden giriyon tespit edemedim amk.')
+            alert('Opera kullanıyor olabilirsin, Chrome linkini kullan.')
         }
     }
 
