--- a/index.html
+++ b/index.html
@@ -274,9 +274,9 @@ NEVER GONNA TELL A LIE AND HURT YOU
     </div>
 
     <div id="buttons">
-        <button  id="dropdown-button" onclick="dropdownToggle()">Harita Tıkla Git</button>
         <a class="button" href="https://github.com/rktfier/porcay-overlay/raw/master/tempman.user.js">Script'i Kur</a>
         <button  onclick="videoDialogToggle()" class="button">Anlamayanlar için video</button>
+        <a class="button" href="https://www.reddit.com/r/place/?jsontemplate=https://rktfier.github.io/porcay-overlay/porcay.json">Reddit'e git</a>
     </div>
 
     <div id="dropdown">
